// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Page renders correctly 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#e4edea",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3fff5",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "borderColor": "white",
              "borderTopLeftRadius": 5,
              "borderTopRightRadius": 5,
              "borderWidth": 1.5,
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 5,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#58a1a3",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 0.25,
                "lineHeight": 21,
                "marginTop": 2,
              }
            }
          >
            My Workouts
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 50,
                "width": 50,
              }
            }
          />
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3fff5",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "borderColor": "white",
              "borderTopLeftRadius": 5,
              "borderTopRightRadius": 5,
              "borderWidth": 1.5,
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 5,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#58a1a3",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 0.25,
                "lineHeight": 21,
                "marginBottom": 4.5,
              }
            }
          >
            Log Workouts
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "height": 44,
                "width": 44,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CreateExercise Component renders correctly 1`] = `
<RCTScrollView>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "700",
            },
            {
              "fontSize": 24,
              "lineHeight": 32,
            },
            {
              "marginBottom": 16,
              "marginLeft": 16,
              "marginRight": 16,
              "marginTop": 16,
            },
          ]
        }
      >
        Create Exercise
      </Text>
      <
        color="black"
        name="keyboard-arrow-up"
        size={24}
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`CreateRoutine Component renders correctly 1`] = `
<RCTScrollView>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "700",
            },
            {
              "fontSize": 24,
              "lineHeight": 32,
            },
            {
              "marginBottom": 16,
              "marginLeft": 16,
              "marginRight": 16,
              "marginTop": 16,
            },
          ]
        }
      >
        Create Routine
      </Text>
      <
        color="black"
        name="keyboard-arrow-up"
        size={24}
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`Landing Page renders correctly 1`] = `
<View
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        1077453733,
        3212897689,
      ]
    }
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        [
          {
            "marginTop": 80,
          },
          {
            "shadowColor": "rgba(0, 0, 0, 0.1)",
            "shadowOffset": {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 10,
          },
          {
            "height": 150,
            "width": 150,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 24,
            "lineHeight": 32,
          },
          {
            "color": "#0f766e",
          },
          {
            "fontWeight": "700",
          },
          {
            "marginTop": 20,
          },
        ]
      }
    >
      Fitness Tracker
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#0d9488",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "marginTop": 160,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#fff",
            },
            {
              "fontSize": 18,
              "lineHeight": 28,
            },
          ]
        }
      >
        Get Started
      </Text>
    </View>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`LogTab Page renders correctly 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#e4edea",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3fff5",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "borderColor": "white",
              "borderTopLeftRadius": 5,
              "borderTopRightRadius": 5,
              "borderWidth": 1.5,
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 5,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#58a1a3",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 0.25,
                "lineHeight": 21,
                "marginTop": 2,
              }
            }
          >
            My Workouts
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 50,
                "width": 50,
              }
            }
          />
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3fff5",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "borderColor": "white",
              "borderTopLeftRadius": 5,
              "borderTopRightRadius": 5,
              "borderWidth": 1.5,
              "flex": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 5,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#58a1a3",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 0.25,
                "lineHeight": 21,
                "marginBottom": 4.5,
              }
            }
          >
            Log Workouts
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "height": 44,
                "width": 44,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`WorkoutSelect Component renders correctly 1`] = `
<View>
  <Text>
    Either no plan, routine, or exercise found! Please add missing category before trying to log workout. If you are receiving this message incorrectly, click refresh data to update. 
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Refresh data
      </Text>
    </View>
  </View>
</View>
`;
